# wavy

./: README.md  wavy.cabal
Data/: Sound.hs
Data/Sound/: Analysis.hs  Internal.hs  Trig.hs  WAVE.hs
Data/Sound/Container/: Chunks.hs
Data/Sound/Core/: Chunked.hs
bench/: encoding.hs  synth.hs
examples/: karplus.hs  sine.hs  sineV.hs  square.hs
