Name: wavy
Version: 0.1
Author: Daniel Díaz
Category: Sound
Build-type: Simple
License: BSD3
License-file: license
Maintainer: Daniel Díaz (dhelta `dot` diaz `at` gmail `dot` com)
Stability: Experimental
Bug-reports: https://github.com/Daniel-Diaz/wavy/issues
Homepage: http://daniel-diaz.github.com/wavy
Synopsis: Haskell Sound Suite.
Description: Haskell Sound library.
Cabal-version: >= 1.8
Tested-with: GHC == 7.6.3
Extra-source-files:
  README.md
  -- Examples
  examples/sine.hs
  examples/karplus.hs
  examples/square.hs
  examples/sineV.hs
  -- Benchmarks
  bench/synth.hs
  bench/encoding.hs

Source-repository head
  type: git
  location: git://github.com/Daniel-Diaz/wavy.git

Library
  Build-depends: base ==4.*
               , binary >= 0.6.4
               , bytestring == 0.10.*
               , deepseq
               , vector
               , containers
               , AC-Random
               , data-binary-ieee754
               , parallel
               , vector-fftw
  Exposed-modules:
    Data.Sound.Core.Chunked
    Data.Sound
    Data.Sound.Internal
    Data.Sound.WAVE
    --
    Data.Sound.Analysis
    Data.Sound.Trig
  GHC-Options: -Wall -O2

benchmark wavy-bench-synth
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: synth.hs
  build-depends: base ==4.*
               , wavy
               , criterion
  ghc-options: -O2

benchmark wavy-bench-encoding
  type: exitcode-stdio-1.0
  hs-source-dirs: bench
  main-is: encoding.hs
  build-depends: base ==4.*
               , wavy
               , criterion
  ghc-options: -O2 -threaded
